<resources>
    <string name="app_name">Latend</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="language">언어 설정 (Language)</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="lock_ok">앱 암호 설정</string>
    <string name="lock_on">암호화 중입니다. 암호를 입력해야만 앱에 접근할 수 있습니다.</string>
    <string name="lock_off">암호화를 해제합니다. </string>

    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="lock_summary">앱을 실행할 때 입력할 비밀번호를 설정합니다.</string>


    <string name="kakao_app_key">98d442a3aaf522560fa218c4930770f5</string>

    <string name="google_login_text">Login with Google</string>
    <string name="server_client_id">1090740701295-540vu4hq5tlo1jkvcejjrdu4n20efjqm.apps.googleusercontent.com</string>

</resources>